--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 <body>
   <div id="app">
     <div id="ui-layer">
-      <div id="score">Score: 0</div>
-      <div id="cheese-count" class="hidden">🧀 0</div>
+      <div id="score">Time: 0.0s</div>
+      <div id="cheese-count" class="">🧀 0</div>
       <div id="current-player" class="hidden">Player: </div>
+      <div id="lives">Lives: 3</div>
       <div id="level">Level: 1</div>
     </div>
     <div id="leaderboard" class="hidden">
-      <div id="celebration-msg" class="hidden"></div>
+      <div id="celebration-msg" class="hidden">GAME OVER<br><span style="font-size: 0.6em">Rank # -- • Level 1 • --s •
+          🧀 0</span></div>
       <h2>Leaderboard</h2>
       <div id="leaderboard-list"></div>
       <div id="name-input-container">
