feat: add start screen with background scenery, make enemies static, fix mouse size

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       <div id="lives">Lives: 3</div>
       <div id="level">Level: 1</div>
     </div>
+    <div id="start-screen">
+      <h1>Mouse Adventure</h1>
+      <p>Enter your name to start:</p>
+      <input type="text" id="start-player-name" placeholder="Mouse Name" maxlength="10">
+      <button id="start-btn">Start Game</button>
+    </div>
     <div id="leaderboard" class="hidden">
       <div id="celebration-msg" class="hidden">GAME OVER<br><span style="font-size: 0.6em">Rank # -- • Level 1 • --s •
           🧀 0</span></div>
