--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
       <p>Enter your name to start:</p>
       <input type="text" id="start-player-name" placeholder="Mouse Name" maxlength="10">
       <button id="start-btn">Start Game</button>
+
+      <div id="difficulty-selection">
+        <label>
+          <input type="radio" name="difficulty" value="hard" checked> Hard
+        </label>
+        <label>
+          <input type="radio" name="difficulty" value="moderate"> Moderate
+        </label>
+        <label>
+          <input type="radio" name="difficulty" value="easy"> Easy
+        </label>
+      </div>
     </div>
     <div id="leaderboard" class="hidden">
       <div id="celebration-msg" class="hidden">GAME OVER<br><span style="font-size: 0.6em">Rank # -- • Level 1 • --s •
