fix: restore world init in constructor and hide HUD on start screen

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="app">
-    <div id="ui-layer">
+    <div id="ui-layer" class="hidden">
       <div id="score">Time: 0.0s</div>
       <div id="cheese-count" class="">🧀 0</div>
       <div id="current-player" class="hidden">Player: </div>
